--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -302,7 +302,7 @@
     margin: 0 5px;
     width: 15px;
     height: 15px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #CCCCCC !important;
     transition: .5s;
 }
 
