--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -438,3 +438,10 @@
 .service-group a:hover i {
   transform: scale(1.2);
 }
+.image-hover-zoom {
+  transition: transform 0.5s ease;
+}
+
+.image-hover-zoom:hover {
+  transform: scale(1.05);
+}
