--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -255,7 +255,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--primary);
+    background: #d81324bd;
     transform: scale(0);
     transition: .5s;
 }
