--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -720,3 +720,110 @@ background-image: url("../img/test.jpg");
     left: 0px;
   }
 }
+.float-left {
+    float: left !important;
+}
+.mr-4, .mx-4 {
+    margin-right: 1.5rem !important;
+}
+.float-right {
+    float: right !important;
+}
+.ml-4, .mx-4 {
+    margin-left: 1.5rem !important;
+}
+.mr-3, .mx-3 {
+    margin-right: 1rem !important;
+}
+.form-group {
+    margin-bottom: 1rem;
+}
+.media {
+    display: flex;
+    align-items: flex-start;
+}
+.badge {
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.badge-pill {
+    padding-right: 0.6em;
+    padding-left: 0.6em;
+}
+.badge-primary {
+    color: #fff;
+    background-color: #d81324;
+}
+
+/*  */
+
+.dedcription-btn {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  border-radius: 30px;
+  background-color: rgb(216, 19, 36);
+  color: #e4e3e2;
+  text-align: center;
+  font-size: 18px;
+  padding: 9px 0;
+  transition: all 0.3s;
+  padding-right: 40px;
+  margin: 20px 5px;
+  box-shadow: 0 3px 20px 0 rgb(184 64 64 / 47%);
+}
+.dedcription-btn .btn-icon {
+  width: 80px;
+  height: 45px;
+  float: right;
+  position: absolute;
+  border-radius: 30px 30px 30px 0;;
+  right: 0px;
+  top: 0px;
+  transition: all 0.3s;
+}
+.name-descripeion {
+  position: relative;
+  z-index: 9999;
+}
+.btn-icon::after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-top: 45px solid rgb(216, 19, 36);
+  border-right: 40px solid transparent;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.dedcription-btn:hover .btn-icon {
+  width: 100%;
+  border-radius: 30px;
+}
+.dedcription-btn:hover .btn-icon::after {
+  display: none;
+  opacity: 0.1;
+}
+.btn-icon i {
+  position: absolute;
+  right: 25px;
+  top: 15px;
+  color: #fff;
+}
+.dedcription-btn:hover {
+  color: #fff!important;
+}
+.heart {
+  background-color: #000000!important;
+}
+.pl-3, .px-3 {
+    padding-left: 1rem !important;
+}
