--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -542,6 +542,7 @@ background-image: url("../img/test.jpg");
 .car-road {
   width: 330px;
   overflow: hidden;
+  margin-bottom: 30px;
 }
 
 .car {
@@ -622,8 +623,8 @@ background-image: url("../img/test.jpg");
   content: '';
   width: 42px;
   height: 42px;
-  top: 12px;
-  left: 12px;
+  top: 5px;
+  left: 5px;
   border-radius: 50%;
   background: white;
   position: absolute;
@@ -718,6 +719,205 @@ background-image: url("../img/test.jpg");
   }
   100% {
     left: 0px;
+  }
+}
+@media (max-width: 992px) {
+    
+  .car-road, .car {
+    width: 260px;
+  }
+
+  .car-base {
+    height: 52px;
+  }
+
+  .car-top {
+    height: 86px;
+    width: 156px;
+    margin-bottom: -43px;
+    margin-left: 35px;
+    border-radius: 250px / 140px;
+  }
+
+  .car-top::before {
+    border-top: 43px solid transparent;
+    border-bottom: 28px solid transparent;
+    border-right: 102px solid #D81324;
+    left: -24px;
+  }
+
+  .car-top::after {
+    top: 34px;
+    right: -70px;
+    width: 140px;
+    height: 18px;
+  }
+
+  .window {
+    width: 100px;
+    height: 26px;
+    top: 6px;
+    left: 26px;
+  }
+
+  .window::before {
+    left: 46px;
+    width: 12px;
+  }
+
+  .wheel {
+    width: 52px;
+    height: 52px;
+    border: 5px solid white;
+  }
+
+  .wheel::before {
+    width: 32px;
+    height: 32px;
+    top: 10px;
+    left: 10px;
+  }
+
+  .wheel:after {
+    top: 10px;
+    bottom: 10px;
+    width: 7px;
+  }
+
+  .wheel-left,
+  .wheel-right {
+    bottom: -25px;
+  }
+
+  .wheel-left {
+    left: 26px;
+  }
+
+  .wheel-right {
+    right: 26px;
+  }
+
+  .wheel-spike {
+    left: 8px;
+    width: calc(100% - 16px);
+    height: 6px;
+  }
+
+  .wheel-center {
+    width: 10px;
+    height: 10px;
+  }
+
+  .head-light {
+    width: 24px;
+    height: 9px;
+    top: 46px;
+    right: 2px;
+  }
+
+  .road {
+    margin-top: 18px;
+    height: 6px;
+  }
+}
+
+/* Small screens - Mobile */
+@media (max-width: 576px) {
+  .car-road, .car {
+    width: 200px;
+  }
+
+  .car-base {
+    height: 40px;
+  }
+
+  .car-top {
+    height: 66px;
+    width: 122px;
+    margin-bottom: -33px;
+    margin-left: 25px;
+    border-radius: 200px / 120px;
+  }
+
+  .car-top::before {
+    border-top: 33px solid transparent;
+    border-bottom: 22px solid transparent;
+    border-right: 78px solid #D81324;
+    left: -18px;
+  }
+
+  .car-top::after {
+    top: 24px;
+    right: -55px;
+    width: 110px;
+    height: 14px;
+  }
+
+  .window {
+    width: 80px;
+    height: 20px;
+    top: 4px;
+    left: 18px;
+  }
+
+  .window::before {
+    left: 35px;
+    width: 8px;
+  }
+
+  .wheel {
+    width: 40px;
+    height: 40px;
+    border: 4px solid white;
+  }
+
+  .wheel::before {
+    width: 24px;
+    height: 24px;
+    top: 8px;
+    left: 8px;
+  }
+
+  .wheel:after {
+    top: 8px;
+    bottom: 8px;
+    width: 6px;
+  }
+
+  .wheel-left,
+  .wheel-right {
+    bottom: -20px;
+  }
+
+  .wheel-left {
+    left: 18px;
+  }
+
+  .wheel-right {
+    right: 18px;
+  }
+
+  .wheel-spike {
+    left: 6px;
+    width: calc(100% - 12px);
+    height: 5px;
+  }
+
+  .wheel-center {
+    width: 8px;
+    height: 8px;
+  }
+
+  .head-light {
+    width: 18px;
+    height: 6px;
+    top: 36px;
+    right: 1px;
+  }
+
+  .road {
+    margin-top: 12px;
+    height: 5px;
   }
 }
 .float-left {
