--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1183,3 +1183,128 @@ background-image: url("../img/test.jpg");
     background-color:#d81324;
     color: #fff;
 }
+
+
+/*  */
+
+.gallery-content #gallery {
+  padding-top: 40px;
+  @media screen and (min-width: 991px) {
+    padding: 60px 30px 0 30px;
+  }
+}
+
+.gallery-content .img-wrapper {
+  position: relative;
+  margin-top: 15px;
+  img {
+    width: 100%;
+  }
+}
+.gallery-content .img-responsive{
+  border: 1px solid rgba(0,0,0,0.125) ;
+  padding: 10px;
+}
+.gallery-content .img-overlay {
+  background: rgba(0,0,0,0.7);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  i {
+    color: #fff;
+    font-size: 3em;
+  }
+}
+
+.gallery-content #overlay {
+  background: rgba(0,0,0,0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1026;
+  /* // Removes blue highlight */
+  -webkit-user-select: none;
+  -moz-user-select: none;    
+  -ms-user-select: none; 
+  user-select: none; 
+  img {
+    margin: 0;
+    width: 80%;
+    height: auto;
+    object-fit: contain;
+    padding: 5%;
+    @media screen and (min-width:768px) {
+        width: 60%;
+    }
+    @media screen and (min-width:1200px) {
+        width: 50%;
+    }
+  }
+}
+
+.gallery-content #nextButton {
+  color: #fff;
+  font-size: 2em;
+   position: absolute;
+  top: auto; 
+  right: 5px;
+  transition: opacity 0.8s;
+  &:hover {
+    opacity: 0.7;
+  }
+  @media screen and (min-width:768px) {
+    font-size: 3em;
+  }
+}
+
+.gallery-content #prevButton {
+  color: #fff;
+  font-size: 2em;
+   position: absolute;
+  top: auto; 
+  left: 5px;
+  transition: opacity 0.8s;
+  &:hover {
+    opacity: 0.7;
+  }
+  @media screen and (min-width:768px) {
+    font-size: 3em;
+  }
+}
+
+.gallery-content #exitButton {
+  color: #fff;
+  font-size: 2em;
+  transition: opacity 0.8s;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  &:hover {
+    opacity: 0.7;
+  }
+  @media screen and (min-width:768px) {
+    font-size: 3em;
+  }
+}
+  .whatsapp-float {
+    position: fixed;
+    bottom: 100px;
+    right: 45px;
+    z-index: 9999;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+  .whatsapp-float:hover {
+    transform: scale(1.1);
+  }
