--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -965,7 +965,7 @@ background-image: url("../img/test.jpg");
 /*  */
 
 .dedcription-btn {
-  width: 50%;
+  width: 200px;
   position: relative;
   display: inline-block;
   border-radius: 30px;
