--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -209,13 +209,22 @@ p{
     background: var(--light);
     transition: .5s;
 }
-
+.service .nav .nav-link:hover h5,
+.service .nav .nav-link.active h5 {
+ color: #fff;
+}
+.service .nav .nav-link:hover {
+ background: var(--primary);
+}
 .service .nav .nav-link.active {
     background: var(--primary);
 }
 
 .service .nav .nav-link.active h4 {
     color: #FFFFFF !important;
+}
+.nav-pills .nav-link:hover i{
+  color: #fff;
 }
 
 
