--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1772,6 +1772,158 @@ margin-top: 40px;
 
 
 
+/*  */
+ .process-content section {
+            padding: 60px 0;
+           
+        }
+.process-content .section-header {
+text-align: center;
+}
+
+.process-content .work-porcess-area {
+    background: #f6f8fc;
+}
+
+.process-content .work-porcess-area.white {
+    background: #FFFFFF;
+}
+
+.process-content .work-porcess-area .process-info {
+    margin-top: 7px;
+}
+
+.process-content .work-porcess-area .process-info .single-process {
+    width: 160px;
+    height: 160px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    padding-top: 53px;
+    margin: 0 auto;
+    background: #FFFFFF;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(248, 32, 72, 0.4);
+    -o-box-shadow: 0 10px 30px 0 rgba(248, 32, 72, 0.4);
+    -moz-box-shadow: 0 10px 30px 0 rgba(248, 32, 72, 0.4);
+    -ms-box-shadow: 0 10px 30px 0 rgba(248, 32, 72, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(248, 32, 72, 0.4);
+    position: relative;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+
+
+.process-content .work-porcess-area .process-info .single-process:after {
+     position: absolute;
+  content: "\f101";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -65px;
+  color: #D81324;
+}
+ 
+
+.process-content .work-porcess-area .process-info .single-process.first {
+    background: #D81324;
+}
+
+.process-content .work-porcess-area .process-info .single-process.first i:before {
+    color: #FFFFFF;
+}
+
+.process-content .work-porcess-area .process-info .single-process.first h4 {
+    color: #FFFFFF;
+}
+
+.process-content .work-porcess-area .process-info .single-process.thard {
+    background: #D81324;
+}
+
+.process-content .work-porcess-area .process-info .single-process.thard i:before {
+    color: #FFFFFF;
+}
+
+.process-content .work-porcess-area .process-info .single-process.thard h4 {
+    color: #FFFFFF;
+}
+
+.process-content .work-porcess-area .process-info .single-process.last:after {
+    display: none;
+}
+
+.process-content .work-porcess-area .process-info .single-process i {
+    display: block;
+    line-height: 25px;
+    margin-bottom: 12px;
+}
+
+.process-content .work-porcess-area .process-info .single-process i:before {
+    font-size: 36px;
+    color: #D81324;
+}
+
+.process-content .work-porcess-area .process-info .single-process h4 {
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: #D81324;
+}
+
+@media only screen and (max-width: 767px) {
+     .process-content .work-porcess-area .process-info .single-process::after {
+        display: none;
+    }
+    .process-content .work-porcess-area .process-info .single-process{
+        margin-top: 30px;
+    }
+    .process-content .work-porcess-area .section-title h2{
+        margin-bottom: 5px;
+    }
+   
+
+}
+/*  */
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(calc(-250px * 7)); }
+}
+.Company_logo{
+  background-color: #f6f8fc;
+  margin-bottom: 10px;
+  padding: 15px;
+}
+.Company_logo .slider {
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: auto;
+}
+
+.Company_logo .slide-track {
+  animation: scroll 40s linear infinite;
+  display: flex;
+  width: calc(250px * 14);
+}
+
+.Company_logo .slide {
+  height: 100px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/*  */
+
 
 
 
