--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2328,7 +2328,8 @@ background: linear-gradient(135deg, #000000, #d81324);
   color: #000; /* Setting link color to black */
   display: block; /* Displaying links as blocks */
   margin-bottom: 20px; /* Adding margin for better spacing */
-  text-align: start;
+  text-align: center;
+  margin-top: 15px;
 }
 .rightsides div a:hover {
   color: #D81324; 
@@ -2704,6 +2705,7 @@ background: linear-gradient(135deg, #000000, #d81324);
     width: 100%;
   }
 }
+
 .mainbody {
   background-color: #c9d6ff;
    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, #f9d2d5 100%);
@@ -2714,7 +2716,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   height: 100vh;
 }
 
-.container {
+.contented {
   background-color: white;
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, .35);
@@ -2725,25 +2727,25 @@ background: linear-gradient(135deg, #000000, #d81324);
   min-height: 480px;
 }
 
-.container p {
+.contented p {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: .3px;
   margin: 20px 0;
 }
 
-.container span {
+.contented span {
   font-size: 12px;
 }
 
-.container a {
+.contented a {
   color: #333;
   font-size: 13px;
   text-decoration: none;
   margin: 15px 0 10px;
 }
 
-.container button {
+.contented button {
   background-color: #d81324;
   color: #fff;
   font-size: 12px;
@@ -2757,12 +2759,12 @@ background: linear-gradient(135deg, #000000, #d81324);
   margin-top: 10px;
 }
 
-.container button.hidden {
+.contented button.hidden {
   background-color: transparent;
   border-color: #fff;
 }
 
-.container form {
+.contented form {
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -2772,7 +2774,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   height: 100%;
 }
 
-.container input {
+.contented input {
   background-color: #eee;
   border: none;
   margin: 8px 0;
@@ -2796,7 +2798,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   z-index: 2;
 }
 
-.container.active .sign-in {
+.contented.active .sign-in {
   transform: translateX(100%);
 }
 
@@ -2807,7 +2809,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   z-index: 1;
 }
 
-.container.active .sign-up {
+.contented.active .sign-up {
   transform: translateX(100%);
   opacity: 1;
   z-index: 5;
@@ -2854,7 +2856,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   z-index: 1000;
 }
 
-.container.active .toggle-container {
+.contented.active .toggle-container {
   transform: translateX(-100%);
   border-radius: 0 150px 100px 0;
 }
@@ -2870,7 +2872,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   transition: all .6s ease-in-out;
 }
 
-.container.active .toggle {
+.contented.active .toggle {
   transform: translateX(50%);
 }
 
@@ -2893,7 +2895,7 @@ background: linear-gradient(135deg, #000000, #d81324);
   transform: translateX(-200%);
 }
 
-.container.active .toggle-left {
+.contented.active .toggle-left {
   transform: translateX(0);
 }
 
@@ -2902,6 +2904,6 @@ background: linear-gradient(135deg, #000000, #d81324);
   transform: translateX(0);
 }
 
-.container.active .toggle-right {
+.contented.active .toggle-right {
   transform: translateX(200%);
 }
